@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190918"
-#define public MagickPackageReleaseDate "snapshot-20190918"
+#define public MagickPackageVersionAddendum ".020190919"
+#define public MagickPackageReleaseDate "snapshot-20190919"
